muoni/GraalVM/language/tests/error/InvalidAssignmentInWhileCond.hn
fn double(x) {
  return 2 * x;
}

fn main() {
  while (double(2) = 4) {
    42;
  }
}